List title no longer overlaps first list item.

--- a/src/sass/components/apl.scss
+++ b/src/sass/components/apl.scss
@@ -308,7 +308,7 @@
       text-transform: uppercase;
       letter-spacing: -0.08px;
       line-height: 18px;
-      margin: 18px 0 -12px 16px;
+      margin: 18px 0 0 16px;
     }
     .item {
       border: 0;
